<resources>
    <string name="app_name">xTicket</string>
    <string name="unassigned">Sin asignar</string>
    <string name="event">Evento</string>
    <string name="name">Nombre</string>
    <string name="lastname">Apellido(s)</string>
    <string name="numberphone">Numero Telefonico</string>
    <string name="enterEventName">Ingrese el nombre del evento</string>
    <string name="date">Fecha</string>
    <string name="eventDate">Fecha del evento</string>
    <string name="pickDate">Fecha del evento</string>
    <string name="duration">Duración</string>
    <string name="eventDuration">Duración del evento</string>
    <string name="pickDuration">Seleccione la duración del evento</string>
    <string name="minDuration">La duración mínima es de 2 horas</string>
    <string name="musicalGenre">Género musical</string>
    <string name="pickMusicalGenre">Seleccione un género musical</string>
    <string name="select">Seleccionar</string>
    <string name="ageRestriction">Restricción de edad</string>
    <string name="description">Descripción</string>
    <string name="enterDescription">Ingrese una descripción del evento</string>
    <string name="location">Ubicación</string>
    <string name="enterLocation">Ingrese la ubicación del evento</string>
    <string name="bandsAndArtists">Bandas y artistas</string>
    <string name="enterBandOrArtist">Ingrese una banda o artista</string>
    <string name="addBandOrArtist">Agregar banda o artista</string>
    <string name="createEvent">Crear evento</string>
    <string name="SignUp">Registrarse</string>
    <string name="eventCreated">Evento creado</string>
    <string name="eventWasNotCreated">Error al registrar el evento</string>
    <string name="emptyField">Este campo no puede estar vacío</string>
    <string name="emptyFields">No puede haber campos vacíos</string>
    <string name="enterName">Ingrese su nombre</string>
    <string name="enterLastName">Ingrese sus apellidos</string>
    <string name="enterNumberphone">Ingrese su numero telefonico</string>
    <string name="enterPassword">Ingrese una contraseña</string>
    <string name="enterEmail">Ingrese su email</string>
    <string name="password">Contraseña</string>
    <string name="passwordConfirmationTickteTaker">Codigo del evento</string>
    <string name="enterPasswordConfirmation">Ingrese de nuevo la contraseña</string>
    <string name="confirmPassword">Confirme su contraseña</string>
    <string name="create_sign_up">Registrarse</string>
    <string name="emptyBandOrArtist">Por favor, ingrese el nombre de una banda o artista</string>
    <string name="isEventPlanner">¿Eres Organizador?</string>
    <string name="bandOrArtistAlreadyAdded">No puede haber bandas o artistas duplicados</string>
    <string name="emptyBandOrArtistList">Ingrese al menos una banda o artista</string>
    <string name="sale_date">Fecha de evento</string>
    <string name="only_adults">Solo adultos</string>
    <string name="number_of_tickets">Cantidad de boletos: </string>
    <string name="price">Precio:  </string>
    <string name="end_hour">Hora de fin</string>
    <string name="max_tickets">Max. boletos por usuario: </string>
    <string name="start_hour">Hora de inicio</string>
    <string name="create_sale_date">Crear fecha</string>
    <string name="signIn">INICIAR SESIÓN</string>
    <string name="signInTicketTaker">INICIAR SESIÓN COMO PORTERO</string>
    <string name="createAccount">CREAR CUENTA</string>
    <string name="email">Correo electrónico</string>
    <string name="forgotPassword">¿Olvidaste tu contraseña?</string>
    <string name="areYouATicketTaker">¿ERES PORTERO?</string>
    <string name="add_sale_date">Añadir nueva fecha</string>
    <string name="adults">Adultos</string>
    <string name="RegisterTikerTaker">Registrar Portero</string>
    <string name="ticketTakerName">Nombre del portero</string>
    <string name="ticket_details">Detalles del boleto</string>
    <string name="enterTicketTakerCode">Codigo de inicio de sesion para el portero</string>
    <string name="back">Regresar</string>
    <string name="_1000">1000</string>
    <string name="_1200">1200</string>
    <string name="_3">3</string>
    <string name="delete">Eliminar</string>
    <string name="update">Actualizar</string>
    <string name="cancel">Cancelar</string>
    <string name="buy">Comprar</string>
    <string name="space">"  -  "</string>
    <string name="musicalGenreWithColon">Género:&#160;</string>
    <string name="locationWithColon">Ubicación:&#160;</string>
    <string name="event_time">Duracion de evento</string>
    <string name="tickets_sold">Entradas compradas: </string>
    <string name="purchase_date">"Fecha de compra: "</string>
    <string name="close">Cerrar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_qr">Muestre el QR al personal del evento</string>
    <string name="get_refund">Solicitar reembolso</string>
    <string name="followedEventsLabel">Seguidos</string>
    <string name="my_events">Mis eventos</string>
    <string name="profile">Perfil</string>
    <string name="tickets">Mis entradas</string>
    <string name="explore">Explorar</string>
    <string name="tickets_for_buy">Boletos por comprar: </string>
    <string name="total">Total a pagar:</string>
    <string name="message_exception_500">No se ha podido conectar con el servidor, intente de nuevo más tarde</string>
    <string name="message_exception_400">El servidor no ha podido procesar su solicitud, intente de nuevo más tarde</string>
    <string name="message_can_not_connect_with_server">No se ha podido conectar con el servidor</string>
    <string name="xticket_logo">xTICKET</string>
    <string name="welcomeBack">¡Bienvenido de nuevo!</string>
    <string name="welcomeTickerTaker">!Bienvenido Portero!</string>
    <string name="durationError">La hora de finalización debe ser posterior a la hora de inicio</string>
    <string name="saleDateCreated">Fecha de evento creada</string>
    <string name="saleDateNotCreated">Error al crear la fecha de evento</string>
    <string name="saleDateUpdated">Fecha de evento actualizada</string>
    <string name="saleDateNotUpdated">Error al actualizar la fecha de evento</string>
    <string name="saleDateDeleted">Fecha de evento eliminada</string>
    <string name="saleDateNotDeleted">Error al eliminar la fecha de evento</string>
    <string name="attention">Atención</string>
    <string name="doYouWantRefund">¿Desea solicitar un reembolso?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="refundRequested">Reembolso solicitado</string>
    <string name="refundNotRequested">Error al solicitar el reembolso</string>
    <string name="refundWarning">Si cancela su entrada no podrá recuperarla</string>
    <string name="manage_tickets">Gestionar boletos</string>
    <string name="register_ticket_taker">Registrar portero</string>
    <string name="save_event">Guardar evento</string>
    <string name="cancel_event">Cancelar evento</string>
    <string name="eventWasNotUpdated">No se ha podido actualizar el evento</string>
    <string name="eventUpdated">Evento actualizado</string>
    <string name="success">Éxito</string>
    <string name="failure">Error</string>
    <string name="save_profile">Guardar perfil</string>
    <string name="passwordsDontMatch">Las contraseñas no coinciden</string>
    <string name="profile_updated">Perfil actualizado exitosamente</string>
    <string name="profile_not_updated">No se ha podido actualizar el perfil</string>
    <string name="invalidEmail">Ingrese un correo válido</string>
    <string name="invalidPassword">La contraseña debe ser mayor a 6 caracteres y combinar letras (mayúsculas y minúsculas), números y símbolos</string>
    <string name="indicatedEmptyFields">Los campos indicados no pueden estar vacíos</string>
    <string name="searchEventInputHint">Buscar evento...</string>
    <string name="search">Buscar</string>
    <string name="notFound">No encontrado</string>
    <string name="noEventsFound">No se encontraron eventos</string>
    <string name="invalidUser">El correo o la contraseña no son correctos, por favor verifique e intente de nuevo. </string>
    <string name="invalidFields">Los campos no pueden estar vacíos</string>
    <string name="invalidUserData">Por favor, ingrese su correo y contraseña para continuar.</string>
    <string name="invalidTicketTakerData">Por favor, ingrese el codigo de evento para continuar.</string>
    <string name="saleDates">Fechas de evento</string>
    <string name="eventDetails">Detalles del evento</string>
    <string name="availableEvents">Eventos disponibles</string>
    <string name="email_label">Email</string>
    <string name="dialog_accept_button">Aceptar</string>
    <string name="dialog_cancel_button">Cancelar</string>
    <string name="successful_register">Registro de usuario exitoso</string>
    <string name="availableTickets">Entradas disponibles: </string>
    <string name="success_purchase">Compra realizada con exito</string>
    <string name="loading_label">Cargando...</string>
    <string name="search_results_title_bar">"Resultados para "</string>
    <string name="explore_events_title_bar">Explorar eventos</string>
    <string name="event_hour_label">Hora: </string>
    <string name="event_price_label">Entrada: $</string>
    <string name="buy_ticket_button">Comprar boletos</string>
    <string name="event_description_label">Descripción</string>
    <string name="event_dates_label">Fechas</string>
    <string name="no_age_restriction">Apto para todas las edades</string>
    <string name="event_age_restriction_label">Clasificación</string>
    <string name="event_max_capacity">Capacidad máxima</string>
    <string name="event_planner_label">Organizador</string>
    <string name="event_max_tickets_per_person_format">Máximo %d entradas por persona</string>
    <string name="event_ticket_price_format">$ %.2f</string>
    <string name="age_restriction">Mayores de 18</string>
    <string name="event_capacity_format">%d personas</string>
    <string name="event_details">Detalles de evento</string>
    <string name="inputEmail">Ingresa tu correo electrónico</string>
    <string name="sendOneTimeUseCode">Enviar código de un solo uso</string>
    <string name="inputOneTimeUseCode">Ingresa el código que recibiste</string>
    <string name="code">Código</string>
    <string name="dateError">Seleccione una fecha valida</string>
    <string name="empty_tickets">Ingrese la cantidad de tickets</string>
    <string name="Success_bio_auth">Autenticacion exitosa</string>
    <string name="Fail_bio_auth">Autenticacion fallida</string>
    <string name="Cancel_bio_auth">Autenticacion cancelada</string>
    <string name="bio_auth">Autenticacion requerida</string>
    <string name="bio_auth_title">Autenticacion requerida</string>
    <string name="bio_auth_subtitle">Escanee su huella</string>
    <string name="bio_auth_description">Para ver su voleo debe comprobar su identidad</string>
    <string name="bio_auth_negative_button">Cancelar</string>
    <string name="bio_auth_error">Error de autenticacion</string>
    <string name="bio_auth_error_message">No se ha podido autenticar, intente de nuevo</string>

    <string name="sign_out">Cerrar Sesión</string>
</resources>
