<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.view.EventDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event"
                style="@style/SectionTitle"
                android:layout_marginBottom="15dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                style="@style/SectionField"
                android:layout_marginBottom="5dp"
                />

            <EditText
                android:id="@+id/eventName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/enterEventName"
                android:inputType="text"
                android:maxLength="45"
                android:autofillHints=""
                style="@style/SectionFieldEditableArea"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/musicalGenre"
                style="@style/SectionField"
                android:layout_marginBottom="5dp"
                />

            <Spinner
                android:id="@+id/musicalGenres"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:prompt="@string/select"
                android:layout_marginBottom="20dp"
                style="@style/spinnerTheme"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                style="@style/SectionField"
                android:layout_marginBottom="5dp"
                />

            <EditText
                android:id="@+id/eventDescription"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginBottom="20dp"
                android:autofillHints=""
                android:hint="@string/enterDescription"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:maxLength="300"
                android:maxLines="5"
                style="@style/SectionFieldEditableArea"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                style="@style/SectionField"
                android:layout_marginBottom="5dp"
                />

            <EditText
                android:id="@+id/eventLocation"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/enterLocation"
                android:inputType="text"
                android:maxLength="100"
                android:autofillHints=""
                style="@style/SectionFieldEditableArea"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bandsAndArtists"
                style="@style/SectionTitle"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerBandsAndArtists"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="10" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp">

                <EditText
                    android:id="@+id/bandOrArtist"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:hint="@string/enterBandOrArtist"
                    android:inputType="textCapCharacters"
                    android:maxLength="100"
                    android:autofillHints=""
                    android:padding="10dp"
                    style="@style/SectionFieldEditableAreaImage"
                    />

                <ImageButton
                    android:id="@+id/btnAddBandOrArtist"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:src="@drawable/baseline_add_circle_outline_24"
                    android:contentDescription="@string/addBandOrArtist"
                    android:layout_gravity="center"
                    style="@style/BasicButtonStyle"
                    android:background="@drawable/round_corners_no_left_side"
                    />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnManageTickets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:text="@string/manage_tickets"
                app:icon="@drawable/baseline_airplane_ticket_24"
                app:iconGravity="textEnd"
                style="@style/BasicButtonStyle"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegisterTicketTaker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/register_ticket_taker"
                app:icon="@drawable/baseline_person_outline_24"
                app:iconGravity="textEnd"
                style="@style/BasicButtonStyle"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSaveEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/save_event"
                app:icon="@drawable/baseline_edit_24"
                app:iconGravity="textEnd"
                style="@style/BasicButtonStyle"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancelEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="25dp"
                android:text="@string/cancel_event"
                app:icon="@drawable/baseline_cancel_24"
                app:iconGravity="textEnd"
                style="@style/BadButtonStyle" />

        </LinearLayout>

    </ScrollView>

    <View
        android:id="@+id/overlayView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80292727"
        android:visibility="invisible" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:lottie_fileName="ticket.json"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:visibility="invisible"/>

</FrameLayout>